[tool.poetry]
name = "reddit-media-downloader"
version = "0.1.0"
description = "A Python script to download all media posted by a specific Reddit user"
authors = ["egdavid"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"
aiofiles = "^23.1.0"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reddit-media-downloader = "reddit_media_downloader:main"